--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 <img class='title'src="assets/titolo.png" ></div>
 
 
-<div class='bottom-home'><button class='bottoni'type="button"onclick="window.location.href='/video.html'">VIDEO</button>
-	<button class='bottoni' type="button" onclick="window.location.href='/project.html'">PROJECT</button>
+<div class='bottom-home'><button class='bottoni'type="button"onclick="window.location.href='./video.html'">VIDEO</button>
+	<button class='bottoni' type="button" onclick="window.location.href='./project.html'">PROJECT</button>
 </div>
 		<div id="container"></div>
 
