--- a/project.html
+++ b/project.html
@@ -28,7 +28,7 @@
             <p>Chara è nella sua stanza a studiare, ma la sua attenzione viene catturata dal vecchio walkman
               lasciato sulla libreria, mette le cuffie, calza il suo casco da astronauta e viene trasportata
               nel viaggio che aveva tanto sognato, un viaggio spaziale. Viene richiamata presto alla realtà
-              e torna con i piedi per terra. LOL</p>
+              e torna con i piedi per terra. </p>
 
           </div>
           <hr>
@@ -44,7 +44,7 @@
           <div class="answer" id='answer2'>
 
             <p>Gli spunti principali per l’ideazione del corto animato sono la canzone Contact del gruppo francese Daft Punk e una cut scene del videogioco <a class='link'href="https://www.youtube.com/watch?v=08PaD5FvqkM&t=145s ">The Last of Us 2</a>
-              L’idea dell’ambientazione spaziale e della trama trova le sue radici anche nel ritorno di una forte fascinazione per lo spazio che si riscontra negli ultimi anni in seguito ai nuovi programmi NASA e alle nuove esplorazioni spaziali.
+              L’idea dell’ambientazione spaziale e della trama trovano le loro radici anche nel ritorno di una forte fascinazione per lo spazio che si riscontra negli ultimi anni in seguito ai nuovi programmi NASA e alle nuove esplorazioni spaziali.
             </p>
             <div class='img-container2'>
               <img class='img-model' src='assets/ref/ref1.jpeg'>
@@ -109,19 +109,26 @@
           </a>
           <div class="answer">
             <p>Per la modellazione del personaggio è stato seguito il tutorial: <a class='link'href="https://www.youtube.com/watch?v=xCrmYQlzp2A&t=1042s">Modeling a Character in Blender 3d</a><br>
-              Partendo dal volto, la bambina è stata realizzata applicando il modificatore “Mirror” ed in seguito un “Subdivision surface”. I capelli sono stati realizzati creando una serie di Path curve per definire l’andamento dei ciuffi, ed una
-              circle curve, modificata in modo irregolare, per definirne il diametro tramite “geometry”. Una volta scelta la configurazione, i ciuffi sono stati convertiti in Mesh e resi un oggetto unico. Per la realizzazione dei vestiti si è partiti
-              duplicando busto, gambe e piedi, questi sono stati adattati sul corpo del personaggio. Una volta finiti, dopo aver applicato un subdivision surface sono stati scolpiti per restituire una sensazione di morbidezza e fluidità. </p>
+              Partendo dal volto, la bambina è stata realizzata applicando il modificatore “Mirror” seguito da un “Subdivision surface”.
+              I capelli sono stati realizzati creando una serie di Path curve per definire l’andamento dei ciuffi, ed una circle curve,
+              modificata in modo irregolare, per definirne il diametro tramite “geometry”.
+  Una volta scelta la configurazione, i ciuffi sono stati convertiti in Mesh e resi un oggetto unico.
+  Per la realizzazione dei vestiti si è partiti duplicando busto, gambe e piedi, questi sono stati adattati sul corpo del personaggio.
+  Una volta finiti, dopo aver applicato un subdivision surface sono stati scolpiti per restituire una sensazione di morbidezza e fluidità.
+ </p>
             <div class='img-container2'>
               <img class='img-model' src='assets/model/model1.png'>
               <img class='img-model' src='assets/model/model2.png'>
               <img class='img-model' src='assets/model/model6.png'>
             </div>
 
-            <p>Per quanto riguarda il rigging si è partiti da uno scheletro di base, “Human body”, riadattato alle dimensioni del personaggio. Questa è stata una delle parti più laboriose del lavoro, una prima difficoltà è stata riscontrata nelle
-              mani, per realizzare una corretta rotazione e inclinazione delle dita. Un’altra operazione difficoltosa è stata il riggin del volto, che è stato aggiustato tramite weight painting in particolare nell’area degli occhi e delle
-              sopracciglia.
-              È stata posta molta attenzione nel riggin del personaggio in quanto tra gli obiettivi principali del corto c’era la volontà di realizzare animazioni fluide e movimenti realistici.
+            <p>Per  il rigging della protagonista si è partiti da uno scheletro di base, “Human body”,
+              riadattato alle dimensioni del personaggio. Questa è stata una delle parti più laboriose del lavoro,
+              una prima difficoltà è stata riscontrata nelle mani, nel realizzare una corretta rotazione e inclinazione delle dita.
+              Un’altra operazione difficoltosa è stata il rigging del volto, che è stato aggiustato tramite weight painting soprattutto
+              nell’area degli occhi e delle sopracciglia.
+              Si è posta molta attenzione al fine di ottenere un rigging accurato del personaggio
+              in quanto tra gli obiettivi principali del corto c’era la volontà di realizzare animazioni fluide e movimenti realistici. </p>
             <div class='img-container2'>
               <img class='img-model' src='assets/rig/rig1.png'>
               <img class='img-model' src='assets/rig/rig2.png'>
@@ -141,15 +148,18 @@
             <i class="icon ion-md-arrow-down"></i>
           </a>
           <div class="answer">
-            <p>Le animazioni della bambina protagonista durante la prima parte nella stanza sono stati testati e realizzati effettuando delle prove reali di movimenti, misurando nel tempo e riportandole. Per le animazioni più complesse, come
-              l’indossamento del casco, delle cuffie e l’interazione con il walkman, ci si è concentrati agendo frame by frame sulla timeline per ottenere un effetto verosimile.
-              Gli oggetti afferrati dalla protagonista si spostano nello spazio accompagnati dalle sue mani fino a raggiungere la posizione desiderata. Una volta raggiunta questa si applica l’object constraint “Child Of”, che permette all’oggetto di
-              seguire il movimento del rigging del personaggio, in particolare della mano e della testa.
-              La realizzazione di un rigging accurato ha permesso di animare nel dettaglio alcuni elementi del volto, come lo sbattimento delle palpebre e i movimenti delle sopracciglia, donando una maggior espressività alla protagonista,
+            <p>
+              Le animazioni della bambina protagonista durante la prima parte del corto (all’interno) sono stati testati e realizzati
+              effettuando delle prove reali di movimenti, misurati nel tempo e riportati nella timeline. Per le animazioni più complesse,
+              come l’indossamento del casco, delle cuffie e l’interazione con il walkman, ci si è concentrati agendo frame by frame sulla timeline
+              per ottenere un effetto verosimile. Gli oggetti afferrati dalla protagonista si spostano nello spazio accompagnati dalle sue mani fino
+              a raggiungere la posizione desiderata. Una volta raggiunta questa si applica l’object constraint “Child Of”, che permette all’oggetto
+              di seguire il movimento del rigging del personaggio, in particolare della mano e della testa.
+              La realizzazione di un rigging accurato ha permesso di animare nel dettaglio alcuni elementi del volto,
+              come lo sbattimento delle palpebre e i movimenti delle sopracciglia, donando una maggior espressività alla protagonista,
               specialmente nei primissimi piani.
-
-              I movimenti nello spazio sono stati realizzati prendendo a modello alcune scene del cortometraggio animato “float” di Pixar Sparkshot, i movimenti sono lenti in modo da trasmettere allo spettatore l’assenza di gravità e l’atmosfera
-              onirica della sequenza.
+          I movimenti nello spazio sono stati realizzati prendendo a modello alcune scene del cortometraggio animato “float” di Pixar Sparkshot,
+          i movimenti sono lenti in modo da trasmettere allo spettatore l’assenza di gravità e l’atmosfera onirica della sequenza.
 
             </p>
             <div class='img-container2'>
@@ -178,7 +188,7 @@
           <div class="answer">
           <h4>  STANZA </h4><p>
               Per la modellazione della stanza è stato seguito il tutorial: <a class='link'href="https://www.youtube.com/watch?v=3UtNFMZq9Jk&t=234s">Creating Attic room In Blender 2.8</a><br>
-              Gli oggetti principali e gli arredi sono stati modellati da noi, basandoci su fotografie e disegni tecnici.</p>
+              Gli oggetti principali e gli arredi sono stati modellati a partire da fotografie e  disegni tecnici. </p>
             <div class='img-container2'>
               <img class='img-model' src='assets/obj/obj1.jpeg'>
               <img class='img-model' src='assets/obj/obj2.jpeg'>
@@ -186,8 +196,9 @@
             </div>
             <p>Gli oggetti di scena in secondo piano: lo shuttle, il fumetto, la spada laser, il razzo e il monitor sono stati scaricati da sketch fab. (link)
 
-              È stata curata l’estetica della stanza e si è scelto di riempire l’ambientazione di oggetti modellati in modo da rendere l’idea di una stanza vissuta e personale. La scelta degli oggetti ha l’obiettivo di comunicare allo spettatore la
-              passione della protagonista per lo spazio e di suggerire sin dall’inizio il tema del cortometraggio. <br>
+È stata curata l’estetica della stanza e si è scelto di riempire l’ambientazione di oggetti modellati in modo da rendere
+l’idea di una stanza vissuta e personale. La scelta degli oggetti ha l’obiettivo di comunicare allo spettatore
+la passione della protagonista per lo spazio e  di suggerire sin dall’inizio il tema del cortometraggio. . <br>
             </p>
             <div class='img-container2'>
               <img class='img-model' src='assets/amb/amb1.png'>
@@ -195,25 +206,33 @@
               <img class='img-model' src='assets/amb/amb3.png'>
             </div>
           <br><h4>SPAZIO</h4>  <p>
-              Per la seconda parte del corto, le stelle sparse nello spazio sono state realizzate tramite una ColorRamp tra bianco e nero, ed un Noise Texture al background “World”. Questa scelta è stata fatta anche per ottimizzare la velocità dei
-              render finale.<br></p>
+Per la seconda parte del corto, le stelle sparse nello spazio sono state realizzate tramite una ColorRamp
+tra bianco e nero, ed un Noise Texture al background “World”. Questa scelta è stata fatta anche
+per ottimizzare la velocità dei render finale..<br></p>
             <div class='single-img-div'><img class='single-img' src='assets/amb/mondo.png'></div>
 
             <br><h4>PIANETI</h4><p>
-              Per la realizzazione dei pianeti più semplici state realizzate una serie di sfere con applicate le texture dei pianeti del sistema solare, già presenti nella lampada della stanza della bambina. La disposizione dei pianeti non è
-              realistica ma totalmente fantasiosa, a suggerire che si tratta dell’immaginazione della protagonista. Altri pianeti più complessi sono stati realizzati aggiungendo gli anelli, con emission colorate che illuminano l’intera scena.
-              A questi sono stati applicati dei lenti movimenti di rotazione.<br></p>
+              Per la realizzazione dei pianeti più semplici sono state realizzate delle sfere a cui sono state applicate
+              le texture dei pianeti del sistema solare, già presenti nella lampada della stanza della bambina.
+              La disposizione dei pianeti non è realistica ma totalmente fantasiosa, per suggerire che si tratta
+              dell’immaginazione della protagonista. Altri pianeti più complessi sono stati realizzati aggiungendo gli anelli,
+              con emission colorate che illuminano l’intera scena.
+              A questi sono stati applicati dei lenti movimenti di rotazione.
+              <br></p>
 
 
             <br><h4>ASTEROIDI</h4><p>
-              I gruppi di asteroidi sono stati realizzati a partire da cubi, tramite displacement e noise texture. Una volta moltiplicati e posizionati, e stata creata una collezione, utilizzata come base per creare un particles setting e fare in
-              modo che ruotassero attorno ad un pianeta.
-              Per la realizzazione dei buchi neri sono stati applicati <br></p>
+              I gruppi di asteroidi sono stati realizzati a partire da cubi, tramite displacement e noise texture.
+              Una volta moltiplicati e posizionati, e stata creata una collezione, utilizzata come base per creare un particles setting
+              e fare in modo che ruotassero attorno ad un pianeta.
+              Per la realizzazione dei buchi neri sono stati applicati
+ <br></p>
             <div class='single-img-div'><img class='single-img' src='assets/amb/asteroidi.png'></div>
             <br><h4>BUCO NERO</h4><p>
-              Per la realizzazione del buco nero è stato seguito questo tutorial.
-              Si tratta di una sfera intersecata da un piano, al quale sono stati applicati una serie di effetti di colorRamp e Refraction. Vista la quantità di effetti applicata al materiale, non è stato possibile realizzare inquadrature troppo
-              dettagliate in quanto aummentava di molto le tempistiche di render, di conseguenza sono stati inseriti come elementi sullo sfondo.</p>
+
+            Si tratta di una sfera intersecata da un piano, al quale sono stati applicati una serie di effetti di colorRamp e Refraction.
+            Vista la quantità di effetti applicata al materiale, non è stato possibile realizzare inquadrature troppo dettagliate
+            in quanto aummentava di molto le tempistiche di render, di conseguenza sono stati inseriti come elementi sullo sfondo.</p>
             <div class='single-img-div'><img class='single-img' src='assets/amb/buco.png'></div>
 
 
@@ -232,15 +251,20 @@
           </a>
           <div class="answer">
             <h4>LUCI</h4> <p>
-              Le luci d’interno sono dei punti luce che illuminano gli angoli della stanza, e una singola lampada a soffitto alla quale è stata attribuita una forte Emission.
+              Luci
+              Le luci d’interno sono dei punti luce che illuminano gli angoli della stanza, e una singola lampada a soffitto
+              alla quale è stata attribuita una forte Emission.
               L’illuminazione è stata progettata con l’obiettivo di creare un’atmosfera più calda e casalinga.
-              Considerata l’ambientazione notturna del corto è stato scelto di non inserire forti luci d’ambiente, ma di tenere queste basse e soffuse.
-              Nel momento di transizione tra la stanza e lo spazio, tutte le luci della stanza si abbassano fino a spegnersi, mentre si accendono progressivamente le luci del casco da astronauta.
-              La luce che simboleggia l’avviamento dei motori è stata gestita attraverso vari keyframes che hanno permesso continuo cambiamento di tonalità tra il rosso, l’arancione ed il giallo, e di intensità, variando tra 2000w e 1500w, fino a
-              spegnersi.
+              Considerata l’ambientazione notturna del corto è stato scelto di non inserire forti luci d’ambiente,
+              ma di tenere queste basse e soffuse.
+              Nel momento di transizione tra la stanza e lo spazio, tutte le luci della stanza si abbassano fino a spegnersi,
+              mentre si accendono progressivamente le luci del casco da astronauta.
+              La luce che simboleggia l’avviamento dei motori è stata gestita attraverso vari keyframes
+              che hanno permesso continuo cambiamento di tonalità tra il rosso, l’arancione ed il giallo, e di intensità,
+              variando tra 2000w e 1500w, fino a spegnersi.
               Alla luce è stato applicato un effetto di shake all’interno del graph editor.
-
-              La principale fonte di luce nello spazio è data da un punto luce bianco “Sun” posto lontano dalla scena e dall’emission degli anelli di uno dei pianeti più grandi.<br></p>
+              La principale fonte di luce nello spazio è data da un punto luce bianco “Sun” posto lontano dalla scena e dall’emission
+              degli anelli di uno dei pianeti più grandi. <br></p>
 
               <div class='img-container2'>
                 <img class='img-model' src='assets/luci/luci1.png'>
@@ -251,8 +275,11 @@
 
             <br><h4>CAMERE</h4>
             <p>
-              Le camere utilizzate sono 15, di cui 4 statiche. Le inquadrature statiche sono utilizzate solamente nell scene d’interno, mentre le inquadrature nello spazio sono tutte in movimento(?).
-              L’inquadratura della transizione dalla stanza allo spazio, dopo un lento zoom in, compie, nel momento di “decollo”, uno shake frenetico ottenuto tramite l’utilizzo del modificatore “noise” applicato agli assi della camera.
+              Le camere utilizzate sono 15, di cui 4 statiche. Le inquadrature statiche sono utilizzate solamente nell scene d’interno,
+              mentre le inquadrature nello spazio sono tutte in movimento.
+              L’inquadratura della transizione dalla stanza allo spazio, dopo un lento zoom in, compie, nel momento di “decollo”,
+              uno shake frenetico ottenuto tramite l’utilizzo del modificatore “noise” applicato agli assi della camera.
+
             </p>
             <div class='single-img-div'><img class='single-img' src='assets/camera.png'></div>
 
