--- a/project.html
+++ b/project.html
@@ -311,6 +311,6 @@ per ottimizzare la velocità dei render finale..<br></p>
     </div>
 
   </section>
-  <img src='assets/home-icon.png' class='home-icon' onclick="window.location.href='/index.html'" </body>
+  <img src='assets/home-icon.png' class='home-icon' onclick="window.location.href='./index.html'" </body>
 
 </html>
