--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
 <div class='bottom-home'><button class='bottoni'type="button"onclick="window.location.href='./video.html'">VIDEO</button>
 	<button class='bottoni' type="button" onclick="window.location.href='./project.html'">PROJECT</button>
 </div>
+<marquee > CLICK AND DRAG TO MOVE THE HELMET </marquee>
+
 		<div id="container"></div>
 
 		<script type="module">
