--- a/project.html
+++ b/project.html
@@ -108,11 +108,11 @@
             <i class="icon ion-md-arrow-down"></i>
           </a>
           <div class="answer">
-            <p>Per la modellazione del personaggio è stato seguito il tutorial: <a class='link'href="https://www.youtube.com/watch?v=xCrmYQlzp2A&t=1042s">Modeling a Character in Blender 3d</a><br>
-              Partendo dal volto, la bambina è stata realizzata applicando il modificatore “Mirror” seguito da un “Subdivision surface”.
+            <p>Per la modellazione del personaggio è stato seguito il tutorial: <a class='link'href="https://www.youtube.com/watch?v=xCrmYQlzp2A&t=1042s">modeling a Character in Blender 3d</a><br>
+              Partendo dal volto, la bambina è stata realizzata applicando il modificatore “mirror” seguito da un “subdivision surface”.
               I capelli sono stati realizzati creando una serie di Path curve per definire l’andamento dei ciuffi, ed una circle curve,
               modificata in modo irregolare, per definirne il diametro tramite “geometry”.
-  Una volta scelta la configurazione, i ciuffi sono stati convertiti in Mesh e resi un oggetto unico.
+  Una volta scelta la configurazione, i ciuffi sono stati convertiti in mesh e resi un oggetto unico.
   Per la realizzazione dei vestiti si è partiti duplicando busto, gambe e piedi, questi sono stati adattati sul corpo del personaggio.
   Una volta finiti, dopo aver applicato un subdivision surface sono stati scolpiti per restituire una sensazione di morbidezza e fluidità.
  </p>
@@ -194,7 +194,10 @@
               <img class='img-model' src='assets/obj/obj2.jpeg'>
               <img class='img-model' src='assets/obj/obj3.jpeg'>
             </div>
-            <p>Gli oggetti di scena in secondo piano: lo shuttle, il fumetto, la spada laser, il razzo e il monitor sono stati scaricati da sketch fab. (link)
+            <p>Gli oggetti di scena in secondo piano:lo <a class='link'href="https://sketchfab.com/3d-models/space-shuttle-ff4b00b7ebb24fdd98fb96b08f2c43c9">shuttle</a>,
+              il <a class='link'href="https://sketchfab.com/3d-models/open-magazine-01a548cb6fc341c98a99375755cf6ce3">fumetto</a>,
+              la <a class='link'href="https://sketchfab.com/3d-models/lukes-lightsaber-9d9ed140d8644f668b9a441d2c2b0f24">spada laser</a>
+              e il <a class='link'href="https://sketchfab.com/3d-models/monitor-d80755755dba4169a9605f591296f53e">monitor</a> sono stati scaricati da sketch fab.
 
 È stata curata l’estetica della stanza e si è scelto di riempire l’ambientazione di oggetti modellati in modo da rendere
 l’idea di una stanza vissuta e personale. La scelta degli oggetti ha l’obiettivo di comunicare allo spettatore
@@ -229,7 +232,7 @@ per ottimizzare la velocità dei render finale..<br></p>
  <br></p>
             <div class='single-img-div'><img class='single-img' src='assets/amb/asteroidi.png'></div>
             <br><h4>BUCO NERO</h4><p>
-
+            Per la realizzazione del buco nero è stato seguito questo tutorial: <a class='link'href="https://www.youtube.com/watch?v=5naMFeWTBeY&ab_channel=IridesiumIridesium">Create a Black Hole in Blender - Iridesium</a>
             Si tratta di una sfera intersecata da un piano, al quale sono stati applicati una serie di effetti di colorRamp e Refraction.
             Vista la quantità di effetti applicata al materiale, non è stato possibile realizzare inquadrature troppo dettagliate
             in quanto aummentava di molto le tempistiche di render, di conseguenza sono stati inseriti come elementi sullo sfondo.</p>
@@ -296,8 +299,28 @@ per ottimizzare la velocità dei render finale..<br></p>
             <i class="icon ion-md-arrow-down"></i>
           </a>
           <div class="answer">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-              Duis aute irure dolor in reprehenderit in voluptate velit esse cillum.</p>
+            <p>Tutta la post produzione è stata realizzata con Adobe Premiere Pro.
+La prima parte del corto prevede l’utilizzo di audio realizzato grazie a librerie di suoni open source,
+disponibili su youtube e suoni registrati dalla realtà.
+La seconda parte di audio è una registrazione ufficiale della NASA,
+mentre l’ultima parte ha come colonna sonora la canzone “We’re finally landing” del gruppo Home.</p>
+<iframe src="https://open.spotify.com/embed/track/1aayZc3JciIs2GhZcSlCrw" width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+<p>
+Audio e video sono stati sincronizzati su Premiere tramite la timeline.
+
+
+
+È stata applicata una color correction con l’obiettivo di rendere i colori più brillant e saturi.
+
+
+
+È stato applicato un layer aggiuntivo con una sfocatura del 5% e un effetto vignettatura,
+al fine di rendere più naturale la ripresa.
+Ai pianeti è sono stati applicati dei mascherini colorati in modo da creare un bagliore
+e rendere l’amosfera dello spazio più suggestiva.
+
+
+</p>
           </div>
           <hr>
         </div>
