updated post production

--- a/project.html
+++ b/project.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-
+  <img src='assets/home-icon.png' class='home-icon' onclick="window.location.href='./index.html'" >
   <section id='section'>
 
     <div class="container" id='container'>
@@ -304,23 +304,29 @@ La prima parte del corto prevede l’utilizzo di audio realizzato grazie a libre
 disponibili su youtube e suoni registrati dalla realtà.
 La seconda parte di audio è una registrazione ufficiale della NASA,
 mentre l’ultima parte ha come colonna sonora la canzone “We’re finally landing” del gruppo Home.</p>
-<iframe src="https://open.spotify.com/embed/track/1aayZc3JciIs2GhZcSlCrw" width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
 <p>
-Audio e video sono stati sincronizzati su Premiere tramite la timeline.
+Audio e video sono stati sincronizzati su Premiere tramite la timeline.</p>
 
+            <div class='single-img-div'><img class='single-img' src='assets/col/time.png'></div>
 
-
-È stata applicata una color correction con l’obiettivo di rendere i colori più brillant e saturi.
-
-
-
+<p>È stata applicata una color correction con l’obiettivo di rendere i colori più brillant e saturi.
 È stato applicato un layer aggiuntivo con una sfocatura del 5% e un effetto vignettatura,
 al fine di rendere più naturale la ripresa.
 Ai pianeti è sono stati applicati dei mascherini colorati in modo da creare un bagliore
 e rendere l’amosfera dello spazio più suggestiva.
-
-
 </p>
+
+
+<div class='img-container2'>
+  <img class='img-model' src='assets/col/col1.png'>
+  <img class='img-model' src='assets/col/col2.png'>
+  <img class='img-model' src='assets/col/col3.png'>
+</div>
+<div class='img-container2'>
+  <img class='img-model' src='assets/col/col4.png'>
+  <img class='img-model' src='assets/col/col5.png'>
+  <img class='img-model' src='assets/col/col6.png'>
+</div>
           </div>
           <hr>
         </div>
@@ -334,6 +340,6 @@ e rendere l’amosfera dello spazio più suggestiva.
     </div>
 
   </section>
-  <img src='assets/home-icon.png' class='home-icon' onclick="window.location.href='./index.html'" </body>
+</body>
 
 </html>
