--- a/video.html
+++ b/video.html
@@ -8,8 +8,9 @@
         <script> src="https://player.vimeo.com/api/player.js"> </script>
 	</head>
 	<body>
+		<img src='assets/home-icon.png' class='home-icon'onclick="window.location.href='./index.html'">
     <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/119452347?color=9b9b9b&title=0&byline=0&portrait=0" style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe></div>
     <!-- <script src="https://player.vimeo.com/api/player.js"> </script> -->
-<img src='assets/home-icon.png' class='home-icon'onclick="window.location.href='./index.html'"
+
   </body>
 </html>
