--- a/project.html
+++ b/project.html
@@ -310,7 +310,7 @@ Audio e video sono stati sincronizzati su Premiere tramite la timeline.</p>
             <div class='single-img-div'><img class='single-img' src='assets/col/time.png'></div>
 
 <p>È stata applicata una color correction con l’obiettivo di rendere i colori più brillant e saturi.
-È stato applicato un layer aggiuntivo con una sfocatura del 5% e un effetto vignettatura,
+È stato applicato un effetto vignettatura,
 al fine di rendere più naturale la ripresa.
 Ai pianeti è sono stati applicati dei mascherini colorati in modo da creare un bagliore
 e rendere l’amosfera dello spazio più suggestiva.
