--- a/project.html
+++ b/project.html
@@ -15,8 +15,8 @@
     <div class="container" id='container'>
 
 
-        <div class="accordion-item" id="question1">
-          <a class="accordion-link" href="#question1">
+        <div class="accordion-item" id="trama">
+          <a class="accordion-link" href="#trama">
             <!-- <div class="flex"> -->
             <h3>TRAMA</h3>
             <!-- </div> -->
@@ -33,8 +33,8 @@
           </div>
           <hr>
         </div>
-        <div class="accordion-item" id="question2">
-          <a class="accordion-link" href="#question2">
+        <div class="accordion-item" id="references">
+          <a class="accordion-link" href="#references">
             <!-- <div class="flex"> -->
             <h3>REFERENCES</h3>
             <!-- </div> -->
@@ -60,8 +60,8 @@
           </div>
           <hr>
         </div>
-        <div class="accordion-item" id="question3">
-          <a class="accordion-link" href="#question3">
+        <div class="accordion-item" id="storyboard">
+          <a class="accordion-link" href="#storyboard">
             <!-- <div class="flex"> -->
             <h3>STORYBOARD</h3>
             <!-- </div> -->
@@ -99,8 +99,8 @@
           </div>
           <hr>
         </div>
-        <div class="accordion-item" id="question4">
-          <a class="accordion-link" href="#question4">
+        <div class="accordion-item" id="modelli3d">
+          <a class="accordion-link" href="#modelli3d">
             <div>
               <h3>MODELLI 3D</h3>
             </div>
@@ -139,8 +139,8 @@
           <hr>
         </div>
 
-        <div class="accordion-item" id="question5">
-          <a class="accordion-link" href="#question5">
+        <div class="accordion-item" id="animazione3d">
+          <a class="accordion-link" href="#animazione3d">
             <div>
               <h3>ANIMAZIONE 3D</h3>
             </div>
@@ -177,8 +177,8 @@
           <hr>
         </div>
 
-        <div class="accordion-item" id="question6">
-          <a class="accordion-link" href="#question6">
+        <div class="accordion-item" id="ambiente">
+          <a class="accordion-link" href="#ambiente">
             <div>
               <h3>AMBIENTE </h3>
             </div>
@@ -244,8 +244,8 @@ per ottimizzare la velocità dei render finale..<br></p>
           <hr>
         </div>
 
-        <div class="accordion-item" id="question7">
-          <a class="accordion-link" href="#question7">
+        <div class="accordion-item" id="luciecamere">
+          <a class="accordion-link" href="#luciecamere">
             <div>
               <h3>LUCI E CAMERE </h3>
             </div>
@@ -290,8 +290,8 @@ per ottimizzare la velocità dei render finale..<br></p>
           <hr>
         </div>
 
-        <div class="accordion-item" id="question8">
-          <a class="accordion-link" href="#question8">
+        <div class="accordion-item" id="postproduzione">
+          <a class="accordion-link" href="#postproduzione">
             <div>
               <h3>POST PRODUZIONE </h3>
             </div>
